<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:title="@string/nav_title_home"
        android:id="@+id/nav_item_home"
        android:icon="@drawable/nav_icon_home" />

    <item
        android:title="@string/nav_title_map"
        android:id="@+id/nav_item_map"
        android:icon="@drawable/nav_icon_map" />

    <item
        android:title="@string/nav_title_seismos"
        android:id="@+id/nav_item_seismos"
        android:icon="@drawable/nav_icon_seismos" />

    <item
        android:title="@string/nav_title_store"
        android:id="@+id/nav_item_store"
        android:icon="@drawable/nav_icon_store"/>

    <item
        android:title="@string/nav_title_profile"
        android:id="@+id/nav_item_profile"
        android:icon="@drawable/nav_icon_profile"/>

</menu>
